cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_STANDARD 23)
project(my_hpx_project CXX)
find_package(HPX REQUIRED)
find_package(Boost REQUIRED)
find_package(benchmark REQUIRED)
add_executable(bulk_http_asio bulk_http_asio.cpp)
add_executable(bulk_http_hpx bulk_http_hpx.cpp)
target_link_libraries(bulk_http_hpx HPX::hpx HPX::iostreams_component)

target_include_directories(bulk_http_asio PUBLIC ${Boost_INCLUDE_DIRS}) 
target_link_libraries(bulk_http_asio ${Boost_LIBRARIES} wasmtime pthread)
target_include_directories(bulk_http_asio PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/include)
target_link_directories(bulk_http_asio PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/lib)
target_include_directories(bulk_http_asio PUBLIC .)

target_include_directories(bulk_http_hpx PUBLIC ${Boost_INCLUDE_DIRS}) 
target_link_libraries(bulk_http_hpx ${Boost_LIBRARIES} wasmtime pthread)
target_include_directories(bulk_http_hpx PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/include)
target_link_directories(bulk_http_hpx PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/lib)
target_include_directories(bulk_http_hpx PUBLIC .)

add_executable(streaming_http_hpx streaming_http_hpx.cpp)
target_link_libraries(streaming_http_hpx HPX::hpx HPX::iostreams_component)
target_include_directories(streaming_http_hpx PUBLIC ${Boost_INCLUDE_DIRS}) 
target_link_libraries(streaming_http_hpx ${Boost_LIBRARIES} wasmtime pthread)
target_include_directories(streaming_http_hpx PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/include)
target_link_directories(streaming_http_hpx PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/lib)
target_include_directories(streaming_http_hpx PUBLIC .)

add_executable(hpx_action_benchmark bandwidth_benchmarks/hpx_action.cpp)
target_link_libraries(hpx_action_benchmark HPX::hpx HPX::iostreams_component)

add_executable(hpx_channel_benchmark bandwidth_benchmarks/hpx_channel.cpp)
target_link_libraries(hpx_channel_benchmark HPX::hpx HPX::iostreams_component)

add_executable(microbench_hpx microbenchmarks/microbench_hpx.cpp)
target_link_libraries(microbench_hpx HPX::hpx HPX::iostreams_component)

add_executable(microbench microbenchmarks/microbench.cpp)
target_link_libraries(microbench wasmtime pthread benchmark::benchmark benchmark::benchmark_main)
target_include_directories(microbench PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/include)
target_link_directories(microbench PUBLIC wasmtime-v11.0.1-x86_64-linux-c-api/lib)
target_include_directories(microbench PUBLIC .)
